--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -1,7 +1,7 @@
 #menu {
   display: flex;
   /* flex-flow: column nowrap; */
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   width: 100vw;
 }
