--- a/src/components/users/Users.css
+++ b/src/components/users/Users.css
@@ -1,6 +1,7 @@
 .usersList {
-    background: red;
-    width: 250px;
-    text-align: center;
-    margin: 5px 0 5px 0;
+  background: #ffffff8e;
+  color: #e3e3e3;
+  width: 250px;
+  text-align: center;
+  margin: 5px 0 5px 0;
 }
