--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,10 @@ textarea {
   margin: 0.5em 0;
 }
 
+input {
+  background: #ebebeb1f;
+}
+
 .rs-panel-heading {
   background: #e3e3e3;
   text-align: center;
