--- a/src/App.css
+++ b/src/App.css
@@ -42,8 +42,23 @@ textarea {
 input {
   background: #ebebeb1f;
 }
+.rs-panel-group {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.rs-panel {
+  width: 30em;
+  height: auto;
+  border: 1px solid white !important; /* Using !important to override RSuite styles */
+  margin: 1em 0;
+}
 
 .rs-panel-heading {
   background: #e3e3e3;
   text-align: center;
+  font-weight: bold;
 }
