Globally implemented RSuite Container component library to all screens/pages.

--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,33 @@ input {
   background: #ebebeb1f;
 }
 
+.rs-container {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  width: 100vw;
+}
+
+.rs-header {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.rs-navbar {
+  padding: 0.5em;
+  margin-bottom: 1em;
+}
+
+.rs-content {
+  text-align: center;
+}
+
+.rs-footer {
+  font-size: small;
+  text-align: center;
+  margin: 0.5em 0;
+}
+
 .rs-panel-group {
   display: flex;
   flex-flow: row nowrap;
@@ -62,5 +89,10 @@ input {
 .rs-panel-heading {
   background: #e3e3e3;
   text-align: center;
+  font-weight: bold;
+}
+
+.rs-panel-body {
+  text-align: left;
   font-weight: bold;
 }
