Fixed css, input fields now go full width.

--- a/src/components/updateProfile/UpdateProfile.css
+++ b/src/components/updateProfile/UpdateProfile.css
@@ -1,5 +1,4 @@
 #update-profile {
-    display: flex;
-    flex-direction: column;
-    max-width: 20em;
+  display: flex;
+  flex-flow: column nowrap;
 }
