--- a/src/components/createMessage/CreateMessage.css
+++ b/src/components/createMessage/CreateMessage.css
@@ -1,9 +1,8 @@
 #createMessage-form {
   display: flex;
-  flex-direction: column;
-  min-width: 20em;
+  flex-flow: column nowrap;
 }
 
 #createMessage-form input {
-  height: 5em;
+  height: 15vh;
 }
