--- a/src/components/updateProfile/UpdateProfile.css
+++ b/src/components/updateProfile/UpdateProfile.css
@@ -2,3 +2,12 @@
   display: flex;
   flex-flow: column nowrap;
 }
+
+h4 {
+  text-align: center;
+}
+
+.upload {
+  width: 100%;
+  text-align: center;
+}
