--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   background-color: #0f131a;
   color: #e9ebf0;
-  text-shadow: 1px 1px 1px#0f131a6b;
+  text-shadow: 0.1em 0.2em 0.2em#0f131a6b;
 }
 #root {
   display: flex;
@@ -15,11 +15,11 @@ a {
   color: #e9ebf0;
   text-decoration: none;
   cursor: pointer;
-  transition: color 0.2s ease;
+  transition: color 0.3s ease;
 }
 
 a:hover {
-  color: #333;
+  color: #c3c5c9;
   text-decoration: none;
   cursor: pointer;
 }
