--- a/src/App.css
+++ b/src/App.css
@@ -86,10 +86,10 @@ input {
 
 .rs-panel-group {
   display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  flex-basis: 100%;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
 .rs-panel {
