--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   background-color: #0f131a;
   color: #e9ebf0;
-  text-shadow: 0.1em 0.2em 0.2em#0f131a6b;
+  text-shadow: 0.1em 0.1em 0.2em#0f131a6b;
 }
 
 #root {
@@ -93,29 +93,29 @@ input {
 }
 
 .rs-panel {
-  display: flex;
-  flex-flow: column nowrap;
-  flex: 1 100%;
-  border: 1px solid #e9ebf0 !important; /* Using !important to override RSuite styles */
-  padding: 1em;
+  width: 55vw;
+  height: auto;
+  border: 1px solid white !important; /* Using !important to override RSuite styles */
+  margin: 1em 0;
 }
 
 .rs-panel-heading {
   background: #e3e3e3;
   text-align: center;
   font-weight: bold;
-  overflow: hidden;
-  max-width: 35ch;
 }
 
 .rs-panel-body {
-  display: flex;
-  flex-flow: column nowrap;
+  text-align: left;
+  font-weight: bold;
 }
 
 .rs-panel-body img {
-  width: 15em;
+  display: block;
+  width: 25em;
   height: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 button svg {
