Fixes to update profile form inputs, width and height.

--- a/src/components/updateProfile/UpdateProfile.css
+++ b/src/components/updateProfile/UpdateProfile.css
@@ -1,15 +1,8 @@
-#update-profile input {
-  width: 25vw;
+#updateProfile-form {
+  display: flex;
+  flex-flow: column nowrap;
 }
-.aboutInput {
+
+#updateProfile-form .aboutInput {
   height: 15vh;
-}
-
-h4 {
-  text-align: center;
-}
-
-.upload {
-  width: 100%;
-  text-align: center;
 }
